removed contact logs, fix on profile to individual pueblo link, spacing on change view

--- a/src/components/changeViewMenu.module.css
+++ b/src/components/changeViewMenu.module.css
@@ -7,6 +7,9 @@
   padding-top: 1rem;
   flex-wrap: wrap;
 }
+.button {
+  margin: 0 0.025rem;
+}
 
 @media (max-width: 470px) {
   .container {
